# Toy_CServerClient

./: .gitignore  CMakeLists.txt  README.md
corelib/: CMakeLists.txt  tsu_bytebuf_construct.c  tsu_bytebuf_read.c  tsu_bytebuf_write.c  tsu_error.c  tsu_logger.c  tsu_socket.c
corelib-test/: CMakeLists.txt  test_bytebuf.c  testlib.h
include/: tsu_bytebuf.h  tsu_error.h  tsu_logger.h  tsu_socket.h
server/: CMakeLists.txt  servermain.c
